[DDW-680] Adjust wallet name width to prevent overlap with menu buttons

--- a/source/renderer/app/components/layout/TopBar.scss
+++ b/source/renderer/app/components/layout/TopBar.scss
@@ -30,9 +30,9 @@
       display: flex;
       flex-direction: column;
       font-family: var(--font-regular);
+      max-width: 73%;
       text-align: center;
       user-select: text;
-      width: 100%;
 
       .walletName {
         -webkit-box-orient: vertical;
@@ -41,7 +41,6 @@
         font-size: 21px;
         line-height: 25px;
         margin-bottom: 4px;
-        max-width: 45%;
         overflow: hidden;
         position: relative;
         text-overflow: ellipsis;
@@ -85,8 +84,8 @@
     display: flex;
     flex-grow: 1;
     justify-content: center;
-    left: 0;
+    left: 70px;
     position: absolute;
-    width: 100%;
+    width: calc(100% - 140px);
   }
 }
